--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <!-- ios support  -->
   <link rel="apple-touch-icon" href="/img/icons/icon-96x96.png">
   <meta name='apple-mobile-web-app-status-bar' content="#aa7700">
+  <meta name='theme-color' content="#ffe1c4">
 </head>
 <body class="grey lighten-4">
 
@@ -39,6 +40,7 @@
 
   <!-- recipes -->
   <div class="recipes container grey-text text-darken-1">
+    <h6 class="center">Recipes</h6>
     <div class="card-panel recipe white row">
       <img src="/img/dish.png" alt="recipe thumb">
       <div class="recipe-details">
@@ -105,7 +107,7 @@
       </div>
     </form>
   </div>
-
+  <script src="/js/app.js"></script>
   <script src="/js/ui.js"></script>
 </body>
 </html>
